tests/fixtures/positive/release-engineering/convention-plugin-dead-code/settings.gradle.kts
rootProject.name = "convention-plugin-dead-code-positive"

include(":app")
includeBuild("build-logic")
