tests/fixtures/negative/release-engineering/convention-plugin-dead-code/settings.gradle.kts
rootProject.name = "convention-plugin-dead-code-negative"

include(":app")
includeBuild("build-logic")
